Adding some basic classes

--- a/Window Walker/Window Walker/App.xaml
+++ b/Window Walker/Window Walker/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Window_Walker.App"
+﻿<Application x:Class="WindowWalker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
