--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -1,9 +1,13 @@
 ﻿<Window x:Class="WindowWalker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <StackPanel>
-        <ListBox x:Name="OpenWindowsCombo" Height="200"/>
-        <Button x:Name="update" Click="update_Click" Height="50"/>
-    </StackPanel>
+        Title="MainWindow" Height="350" Width="525" MaxHeight="350">
+    <Grid>
+        <ScrollViewer>
+            <StackPanel>
+                <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" />
+                <ListBox x:Name="resultsListBox" />
+            </StackPanel>
+        </ScrollViewer>
+    </Grid>
 </Window>
