--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -1,11 +1,14 @@
 ﻿<Window x:Class="WindowWalker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" MaxHeight="350" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="SetWindowLocation">
+        Title="MainWindow" Height="350" Width="525" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="SetWindowLocation">
     <Grid>
-        <StackPanel>
-            <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" />
-            <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" />
-        </StackPanel>
+        <Border BorderThickness="5" BorderBrush="Gray" x:Name="windowBorder">
+            <StackPanel>
+                <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" />
+                <Grid Height="5" Background="Gray" x:Name="separator" />
+                <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" />
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
