Enabled Mouse window selection and Return focus to the search box on open
Still missing is the abililty to scroll naturally while in the text box, which sucks

--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -7,7 +7,7 @@
             <StackPanel>
                 <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" />
                 <Grid Height="5" Background="Gray" x:Name="separator" />
-                <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" />
+                <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseLeftButtonUp="WindowSelectedByMouseEvent" />
             </StackPanel>
         </Border>
     </Grid>
