--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="WindowWalker.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" ResizeMode="NoResize" Topmost="False" WindowStyle="None" Loaded="SetWindowLocation" Deactivated="WindowLostFocusEventHandler">
+        Title="MainWindow" Height="350" Width="700" ResizeMode="NoResize" Topmost="False" WindowStyle="None" Loaded="SetWindowLocation" Deactivated="WindowLostFocusEventHandler">
     <Grid>
         <Border BorderThickness="5" BorderBrush="Gray" x:Name="windowBorder">
             <StackPanel>
-                <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" />
+                <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot;" />
                 <Grid Height="5" Background="Gray" x:Name="separator" />
                 <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseLeftButtonUp="WindowSelectedByMouseEvent" />
             </StackPanel>
