Fully fixed the problem with hotkey invoked state looking like it came from a previous search result
Turns out, I wasn't calling the updatesize at the right time (which is when the listbox sizechanged event is fired)

Related Work Items: #45

--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -7,7 +7,7 @@
             <StackPanel>
                 <TextBox x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot; and press enter" />
                 <Grid Height="5" Background="Gray" x:Name="separator" />
-                <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseLeftButtonUp="WindowSelectedByMouseEvent" SelectionChanged="WindowSelectionChangedEvent" />
+                <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseLeftButtonUp="WindowSelectedByMouseEvent" SelectionChanged="WindowSelectionChangedEvent" SizeChanged="ListViewSizeChanged"/>
             </StackPanel>
         </Border>
     </Grid>
