--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -6,17 +6,7 @@
 
     <Window.Resources>
         <ResourceDictionary>
-            <VisualBrush x:Key="SettingsBrushLight" Visual="{StaticResource appbar_settings}" Opacity="0.5"/>
-            <VisualBrush x:Key="SettingsBrushDark" Visual="{StaticResource appbar_settings}" Opacity="0.8" />
-
-            <Style x:Key="SettingsRectangle" TargetType="Rectangle">
-                <Setter Property="Fill" Value="{StaticResource SettingsBrushLight}" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Fill" Value="{StaticResource SettingsBrushDark}" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
+            <VisualBrush x:Key="SettingsBrush" Visual="{StaticResource appbar_settings}"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
@@ -28,9 +18,7 @@
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBox controls:TextboxHelper.Watermark="Search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot; and press enter" Width="665" />
-                    <Button x:Name="Settings" Style="{StaticResource ButtonStyle}" Width="25px" Height="26px" BorderThickness="0" Click="SettingsButtonClicked" Margin="0" Padding="0">
-                        <Rectangle Width="15" Height="15" Style="{StaticResource SettingsRectangle}" />
-                    </Button>
+                    <Button x:Name="Settings" Style="{StaticResource ButtonStyle}" Width="25px" Height="25px" BorderThickness="0" Click="SettingsButtonClicked" Background="{StaticResource SettingsBrush}" />
 
                 </StackPanel>
                 <Grid Height="5" Background="#41B1E1" x:Name="separator" />
