--- a/Window Walker/Window Walker/SettingsWindow.xaml
+++ b/Window Walker/Window Walker/SettingsWindow.xaml
@@ -5,39 +5,9 @@
                       Title="SettingsWindow" Height="350" Width="700" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="WindowFinishedLoading" Deactivated="WindowLostFocusEventHandler" TitlebarHeight="0">
     <Window.Resources>
         <ResourceDictionary>
-            <VisualBrush x:Key="HomeBrushLight" Visual="{StaticResource appbar_home}" Opacity="0.5"/>
-            <VisualBrush x:Key="HomeBrushDark" Visual="{StaticResource appbar_home}" Opacity="0.8" />
-            <VisualBrush x:Key="DeleteBrushLight" Visual="{StaticResource appbar_delete}" Opacity="0.5"/>
-            <VisualBrush x:Key="DeleteBrushDark" Visual="{StaticResource appbar_delete}" Opacity="0.8" />
-            <VisualBrush x:Key="AddBrushLight" Visual="{StaticResource appbar_add}" Opacity="0.5"/>
-            <VisualBrush x:Key="AddBrushDark" Visual="{StaticResource appbar_add}" Opacity="0.8" />
-
-            <Style x:Key="DeleteRectangle" TargetType="Rectangle">
-                <Setter Property="Fill" Value="{StaticResource DeleteBrushLight}" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Fill" Value="{StaticResource DeleteBrushDark}" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
-            
-            <Style x:Key="HomeRectangle" TargetType="Rectangle">
-                <Setter Property="Fill" Value="{StaticResource HomeBrushLight}" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Fill" Value="{StaticResource HomeBrushDark}" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
-
-            <Style x:Key="AddRectangle" TargetType="Rectangle">
-                <Setter Property="Fill" Value="{StaticResource AddBrushLight}" />
-                <Style.Triggers>
-                    <Trigger Property="IsMouseOver" Value="True">
-                        <Setter Property="Fill" Value="{StaticResource AddBrushDark}" />
-                    </Trigger>
-                </Style.Triggers>
-            </Style>
+            <VisualBrush x:Key="HomeBrush" Visual="{StaticResource appbar_home}"/>
+            <VisualBrush x:Key="DeleteBrush" Visual="{StaticResource appbar_delete}" />
+            <VisualBrush x:Key="AddBrush" Visual="{StaticResource appbar_add}" />
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
@@ -49,18 +19,17 @@
         <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="settingsWindowBorder">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button Style="{StaticResource ButtonStyle}" x:Name="SettingsBack" Width="25px" Height="25px" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Click="BackButtonClicked" Margin="0" Padding="0">
-                        <Rectangle Style="{StaticResource HomeRectangle}" Width="15" Height="15" />
-                    </Button>
+                    <Button Style="{StaticResource ButtonStyle}" x:Name="SettingsBack" Width="25px" Height="25px" Background="{StaticResource HomeBrush}" Click="BackButtonClicked" Margin="0" Padding="0" />
+
+                    <Label Content="You Type" FontWeight="Bold" Width="220px" Margin="75,0,0,0" />
+                    <Label Content="You Get" FontWeight="Bold" Width="220px" Margin="20,0,0,0" />
                 </StackPanel>
                 <StackPanel x:Name="shortcutsPanel">
                 </StackPanel>
                 <StackPanel x:Name="shortcutInput" Orientation="Horizontal">
-                    <TextBox x:Name="shortcutBefore" controls:TextboxHelper.Watermark="You Input (Example: i)" Width="220px" Margin="100,0,20,0" />
-                    <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="You Get (Example: internet)" Width="220px" Margin="0,0,15,0" />
-                    <Button x:Name="shortcutDone" Width="25px" Height="25px" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Click="DoneClicked" Margin="0" Padding="0">
-                        <Rectangle Style="{StaticResource AddRectangle}" Width="15" Height="15" />
-                    </Button>
+                    <TextBox x:Name="shortcutBefore" controls:TextboxHelper.Watermark="Example: i" Width="220px" Margin="100,0,20,0" />
+                    <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="Example: internet" Width="220px" Margin="0,0,15,0" />
+                    <Button Style="{StaticResource ButtonStyle}" x:Name="shortcutDone" Width="25px" Height="25px" Background="{DynamicResource AddBrush}" Click="DoneClicked" />
                 </StackPanel>
             </StackPanel>
         </Border>
