--- a/Window Walker/Window Walker/SettingsWindow.xaml
+++ b/Window Walker/Window Walker/SettingsWindow.xaml
@@ -2,7 +2,8 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      Title="SettingsWindow" Height="350" Width="700" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="WindowFinishedLoading" Deactivated="WindowLostFocusEventHandler" TitlebarHeight="0">
+                      SizeToContent="WidthAndHeight"
+                      Title="SettingsWindow" ResizeMode="NoResize"  Topmost="True" WindowStyle="None" Loaded="WindowFinishedLoading" Deactivated="WindowLostFocusEventHandler" TitlebarHeight="0">
     <Window.Resources>
         <ResourceDictionary>
             <VisualBrush x:Key="HomeBrush" Visual="{StaticResource appbar_home}"/>
@@ -17,7 +18,7 @@
 
     <Grid>
         <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="settingsWindowBorder">
-            <StackPanel>
+            <StackPanel Margin="10">
                 <StackPanel Orientation="Horizontal">
                     <Button Style="{StaticResource ButtonStyle}" x:Name="SettingsBack" Width="25px" Height="25px" Background="{StaticResource HomeBrush}" Click="BackButtonClicked" Margin="0" Padding="0" />
 
