--- a/Window Walker/Window Walker/SettingsWindow.xaml
+++ b/Window Walker/Window Walker/SettingsWindow.xaml
@@ -3,7 +3,7 @@
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                       SizeToContent="WidthAndHeight"
-                      Title="SettingsWindow" ResizeMode="NoResize"  Topmost="True" WindowStyle="None" Loaded="WindowFinishedLoading" Deactivated="WindowLostFocusEventHandler" TitlebarHeight="0">
+                      Title="SettingsWindow" ResizeMode="NoResize" Width="700" Topmost="True" WindowStyle="None" Loaded="WindowFinishedLoading" Deactivated="WindowLostFocusEventHandler" TitlebarHeight="0">
     <Window.Resources>
         <ResourceDictionary>
             <VisualBrush x:Key="HomeBrush" Visual="{StaticResource appbar_home}"/>
@@ -15,26 +15,41 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-
     <Grid>
-        <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="settingsWindowBorder">
-            <StackPanel Margin="10">
-                <StackPanel Orientation="Horizontal">
-                    <Button Style="{StaticResource ButtonStyle}" x:Name="SettingsBack" Width="25px" Height="25px" Background="{StaticResource HomeBrush}" Click="BackButtonClicked" Margin="0" Padding="0" />
-
-                    <Label Content="You Type" FontWeight="Bold" Width="220px" Margin="75,0,0,0" />
-                    <Label Content="You Get" FontWeight="Bold" Width="220px" Margin="20,0,0,0" />
-                </StackPanel>
-                <StackPanel x:Name="shortcutsPanel">
-                </StackPanel>
-                <StackPanel x:Name="shortcutInput" Orientation="Horizontal">
-                    <TextBox x:Name="shortcutBefore" controls:TextboxHelper.Watermark="Example: i" Width="220px" Margin="100,0,20,0" />
-                    <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="Example: internet" Width="220px" Margin="0,0,15,0" />
-                    <Button Style="{StaticResource ButtonStyle}" x:Name="shortcutDone" Width="25px" Height="25px" Background="{DynamicResource AddBrush}" Click="DoneClicked" />
-                </StackPanel>
+        <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="windowBorder">
+            <StackPanel>
+                <Grid x:Name="TitleLabels" Width="690">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="322.5" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="322.5" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="25"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="You Type" FontWeight="Bold" Width="220px"  HorizontalAlignment="Left"/>
+                    <Label Content="You Get" FontWeight="Bold" Width="220px" Grid.Column="2" HorizontalAlignment="Left"/>
+                    <Button Style="{StaticResource ButtonStyle}" x:Name="SettingsBack" Width="25px" Height="25px" Background="{StaticResource HomeBrush}" Click="BackButtonClicked" Grid.Column="4" />
+                </Grid>
+                <Grid Height="5"  x:Name="separator" />
+                <ListBox x:Name="shortcutsPanel" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SizeChanged="ListViewSizeChanged">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="322.5" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="322.5" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="25"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="shortcutBefore" controls:TextboxHelper.Watermark="Example: i" Width="220px"  HorizontalAlignment="Left"/>
+                        <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="Example: internet" Width="220px" Grid.Column="2" HorizontalAlignment="Left"/>
+                        <Button Style="{StaticResource ButtonStyle}" x:Name="shortcutDone" Width="25px" Height="25px" Background="{DynamicResource AddBrush}" Click="DoneClicked" Grid.Column="4"/>
+                    </Grid>
+                </ListBox>
             </StackPanel>
         </Border>
     </Grid>
+
+
 </controls:MetroWindow>
 
 
