Added shortcut keys
This make sure that you can get through a majority of the flow without
using the mouse. However, you still have to click on a button to get to
the search page. Hopefully, we can come up with a better flow the next
time around.

-:s now takes you to the settings page
-We clear the search text if you navigate using :s but keep the text
otherwise
-Set focus on the first textbox whenever navigating to the settings page
-Pressing enter on the "you get" box adds the shortcut

--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -17,7 +17,7 @@
         <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="windowBorder">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBox controls:TextboxHelper.Watermark="Search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot; and press enter" Width="665" />
+                    <TextBox controls:TextboxHelper.Watermark="Search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot; and press enter. Also, to switch to the settings page, type  &quot;:s &quot; and press enter" Width="665" />
                     <Button x:Name="Settings" Style="{StaticResource ButtonStyle}" Width="25px" Height="25px" BorderThickness="0" Click="SettingsButtonClicked" Background="{StaticResource SettingsBrush}" />
 
                 </StackPanel>
