--- a/Window Walker/Window Walker/SettingsWindow.xaml
+++ b/Window Walker/Window Walker/SettingsWindow.xaml
@@ -32,7 +32,7 @@
                 </Grid>
                 <Grid Height="5"  x:Name="separator" />
                 <ListBox x:Name="shortcutsPanel" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SizeChanged="ListViewSizeChanged">
-                    <Grid>
+                    <Grid Margin="0,0,0,4">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="322.5" />
                             <ColumnDefinition Width="10" />
@@ -41,7 +41,7 @@
                             <ColumnDefinition Width="25"/>
                         </Grid.ColumnDefinitions>
                         <TextBox x:Name="shortcutBefore" controls:TextboxHelper.Watermark="Example: i" Width="220px"  HorizontalAlignment="Left"/>
-                        <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="Example: internet" Width="220px" Grid.Column="2" HorizontalAlignment="Left"/>
+                        <TextBox x:Name="shortcutAfter" controls:TextboxHelper.Watermark="Example: internet" Width="220px" Grid.Column="2" HorizontalAlignment="Left" KeyUp="KeyPressedOnShortcutAfterBox"/>
                         <Button Style="{StaticResource ButtonStyle}" x:Name="shortcutDone" Width="25px" Height="25px" Background="{DynamicResource AddBrush}" Click="DoneClicked" Grid.Column="4"/>
                     </Grid>
                 </ListBox>
