--- a/Window Walker/Window Walker/App.xaml
+++ b/Window Walker/Window Walker/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WpfApplication.App"
+<Application x:Class="WindowWalker.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
@@ -20,7 +20,6 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
