--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -14,14 +14,14 @@
     </Window.Resources>
 
     <Grid>
-        <Border BorderThickness="5" BorderBrush="#41B1E1" x:Name="windowBorder">
+        <Border BorderThickness="5" BorderBrush="SteelBlue" x:Name="windowBorder">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBox controls:TextboxHelper.Watermark="Search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" ToolTip="If you want to quit, type &quot;:quit&quot; and press enter. Also, to switch to the settings page, type  &quot;:s &quot; and press enter" Width="665" />
                     <Button x:Name="Settings" Style="{StaticResource ButtonStyle}" Width="25px" Height="25px" BorderThickness="0" Click="SettingsButtonClicked" Background="{StaticResource SettingsBrush}" />
 
                 </StackPanel>
-                <Grid Height="5" Background="#41B1E1" x:Name="separator" />
+                <Grid Height="5" Background="SteelBlue" x:Name="separator" />
                 <ListBox x:Name="resultsListBox" ScrollViewer.HorizontalScrollBarVisibility="Disabled" MouseLeftButtonUp="WindowSelectedByMouseEvent" SelectionChanged="WindowSelectionChangedEvent" SizeChanged="ListViewSizeChanged"/>
             </StackPanel>
         </Border>
