--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Search your open tabs</h4>
                     <p class="text-muted">Switch between windows using only your keyboard</p>
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-keyboard-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Keyboard Focused</h4>
                     <p class="text-muted">Your everyday workflows work with just the keyboard</p>
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-step-forward fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Custom Shortcuts</h4>
                     <p class="text-muted">Set shortcut character(s) for common searches. eg. 'b' for 'edge' and 'chrome'</p>
