Fix working on three features

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Search your open tabs</h4>
-                    <p class="text-muted">Switch between windows using only your keyboard</p>
+                    <p class="text-muted">Use partial matching to quickly find your window</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-keyboard-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Keyboard Focused</h4>
-                    <p class="text-muted">Your everyday workflows work with just the keyboard</p>
+                    <p class="text-muted">Switch between windows using only your keyboard</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
