--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -17,7 +17,7 @@
         <Border BorderThickness="5" BorderBrush="SteelBlue" x:Name="windowBorder">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <TextBox controls:TextboxHelper.Watermark="Search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" Width="665" />
+                    <TextBox controls:TextboxHelper.Watermark="':quit' to exit, ':s' to go to settings, anything else to search" controls:TextboxHelper.ClearTextButton="True" x:Name="searchTextBox" TextChanged="TextChangedEvent" KeyUp="KeyPressActionHandler" Width="665" />
                     <Button x:Name="Settings" Style="{StaticResource ButtonStyle}" Width="25px" Height="25px" BorderThickness="0" Click="SettingsButtonClicked" Background="{StaticResource SettingsBrush}" />
 
                 </StackPanel>
