Hook up result to new windows

--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -19,7 +19,7 @@
             <ListBox ItemsSource="{Binding Results}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="sfe"></TextBlock>
+                        <TextBlock Text="{Binding ResultWindow.Title}"></TextBlock>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
