--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -2,8 +2,8 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      
-                      Title="MainWindow" Height="350" Width="700" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded">
+                      Title="MainWindow" Width="1000" MinHeight="10" Height="85" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" SizeToContent="Height">
+    
     <Window.Resources>
         <ResourceDictionary>
             <VisualBrush x:Key="SettingsBrush" Visual="{StaticResource appbar_settings}"/>
@@ -15,7 +15,7 @@
 
     <Grid>
         <StackPanel Orientation="Vertical">
-            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontSize="40" Margin="10"/>
             <ListBox ItemsSource="{Binding Results}" SelectedItem="{Binding SelectedWindowResult}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
